config.toml: replace old url with new custom

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dhruvag2000.github.io/"
+baseURL = "https://dhruvagole.codes/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "dimension"
