--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dhruvagole.codes/"
+baseURL = "https://dhruvagole.tech/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "dimension"
